<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">HiDanang</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="lbl_300_000_vnd">300.000 VND</string>
  <string name="lbl_22_12_2023">22/12/2023</string>
  <string name="lbl_con_ng_i">Con người</string>
  <string name="lbl_bi_n">Biển </string>
  <string name="lbl_7_30">7:30</string>
  <string name="lbl_h_i_ch_u">Hải Châu</string>
  <string name="lbl2">/</string>
  <string name="lbl_4_5">4.5</string>
  <string name="msg_g_i_c_nam2">: Gỏi cá Nam Ô là đặc sản cực nổi tiếng của ngư dân làng Nam Ô tại Đà Nẵng. Gỏi được làm từ cá trích tươi Nam Ô và được ướp vị ngon đậm đà, không mùi tanh. Nước chấm mắm mè đậu phộng ăn kèm rau sống, rau tươi cuốn bánh tráng cực ghiền.\u2028
</string>
  <string name="lbl_danang">danang</string>
  <string name="lbl_tour_s_p_t_i">Tour sắp tới </string>
  <string name="msg_m_n_n_c_s_n">Món ăn đặc sản Đà Nẵng</string>
  <string name="msg_ngo_i_c_nh_p">Ngoài cảnh đẹp mê hồn, nơi đây còn sở hữu top 10 món ăn đặc sản hấp dẫn mà chúng tôi gợi ý cho các bạn</string>
  <string name="lbl_hidanang">Hidanang</string>
  <string name="lbl_40_visit">$40 /Visit</string>
  <string name="msg_b_nh_tr_ng_cu_n">Bánh Tráng Cuốn Thịt Heo Đà Nẵng</string>
  <string name="lbl_s_n_tr">Sơn Trà</string>
  <string name="lbl_n_i">Núi</string>
  <string name="lbl">-</string>
  <string name="msg_h_m_nay_blog_c">Hôm nay Blog có gì ? </string>
  <string name="msg_b_n_s_n_s_ng">Bạn đã sẵn sàng khám phá </string>
  <string name="lbl_lake_mcdonald">Lake McDonald</string>
  <string name="lbl_1_500_000_vnd">1.500.000 VND</string>
  <string name="lbl_c_n_12_ng_y">Còn 12 ngày</string>
  <string name="lbl_bi_n_m_kh2">Biển Mỹ Khê</string>
  <string name="lbl_h">Hồ</string>
  <string name="lbl_start">Start</string>
  <string name="lbl_search">Search</string>
  <string name="lbl_40">$40 </string>
  <string name="lbl_hi">Hi</string>
  <string name="lbl_n_ng">Đà Nẵng</string>
  <string name="msg_g_i_c_nam">Gỏi Cá Nam Ô Đà Nẵng</string>
  <string name="lbl_nh_b_n_c">Đỉnh bàn cờ </string>
  <string name="msg_b_o_t_ng_m_thu">Bảo tàng mỹ thuật</string>
  <string name="lbl_18_00">18:00</string>
  <string name="lbl_r_ng">Rừng</string>
  <string name="msg_kh_m_ph_n_n">Khám phá Đà Nẵng cùng chúng tôi</string>
  <string name="lbl_500_000_vnd">500.000 VND</string>
  <string name="lbl_chi_ti_t_tour">Chi tiết tour</string>
  <string name="lbl_n_u_ng">Ăn uống</string>
  <string name="lbl_blog">Blog</string>
  <string name="msg_b_nh_x_o_n_n">Bánh xèo Đà Nẵng</string>
  <string name="lbl_canada">Canada</string>
  <string name="lbl_th_ng_tin_tour">Thông tin tour</string>
  <string name="lbl_l_ch_tr_nh">Lịch trình </string>
  <string name="lbl_bi_n_m_kh">Biển Mỹ  Khê</string>
  <string name="msg_ngo_i_c_nh_p3">Ngoài cảnh đẹp mê hồn, nơi đây còn sở hữu top 10 món ăn đặc sản hấp dẫn mà chúng tôi gợi ý cho các bạn

</string>
  <string name="msg_ngo_i_c_nh_p2">Ngoài cảnh đẹp mê hồn, nơi đây còn sở hữu top 10 món ăn đặc sản hấp dẫn mà chúng tôi gợi ý cho các bạn

Bánh xèo Đà Nẵng: Một tô mì Quảng thơm nức mũi ăn kèm với rau sống, bánh đa, ít đậu phộng và chan xâm xấp nước, trộn đều rồi cho thêm ít chanh cho dậy mùi, thêm chút ớt xanh cho thêm phần đậm đà hương vị
Bánh Tráng Cuốn Thịt Heo Đà Nẵng: Bánh tráng cuốn thịt heo thì vùng nào cũng có, nhưng Đà Nẵng \u201cghi điểm\u201d với miếng thịt heo mềm, mỏng, bì béo ngậy kèm chút mỡ chạy dọc theo thớ thịt cực hấp dẫn.\u2028Gỏi Cá Nam Ô Đà Nẵng: Gỏi cá Nam Ô là đặc sản cực nổi tiếng của ngư dân làng Nam Ô tại Đà Nẵng. Gỏi được làm từ cá trích tươi Nam Ô và được ướp vị ngon đậm đà, không mùi tanh. Nước chấm mắm mè đậu phộng ăn kèm rau sống, rau tươi cuốn bánh tráng cực ghiền.\u2028
</string>
  <string name="msg_a_i_m_n_i_b">Địa điểm nổi bật</string>
  <string name="msg_b_nh_tr_ng_cu">: Bánh tráng cuốn thịt heo thì vùng nào cũng có, nhưng Đà Nẵng \u201cghi điểm\u201d với miếng thịt heo mềm, mỏng, bì béo ngậy kèm chút mỡ chạy dọc theo thớ thịt cực hấp dẫn.\u2028</string>
  <string name="msg_nh_ng_m_n_n">Những món ăn đặc sản Đà Nẵng</string>
  <string name="lbl_blog_m_i_nh_t">Blog mới nhất</string>
  <string name="lbl_vui_ch_i">Vui chơi</string>
  <string name="msg_m_t_t_m_qu">: Một tô mì Quảng thơm nức mũi ăn kèm với rau sống, bánh đa, ít đậu phộng và chan xâm xấp nước, trộn đều rồi cho thêm ít chanh cho dậy mùi, thêm chút ớt xanh cho thêm phần đậm đà hương vị
</string>
  <string name="lbl_visit">Visit</string>
</resources>
